<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cv"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:padding="@dimen/activity_vertical_margin"
            android:background="@color/backgroundtext_card"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvFullName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/edittext_textsize_login"
                    android:textStyle="bold"
                    android:textIsSelectable="true"
                    android:selectAllOnFocus="true"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/text_separator_buton"
                >

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dip"
                    android:textSize="@dimen/textsize_min"
                    android:textIsSelectable="true"
                    />
                <!-- Release Year -->

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/text_separator_buton"
                >

                <TextView
                    android:id="@+id/tvCadenaRuc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/edittext_textsize_login"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/text_separator_buton"
                >

                <TextView
                    android:id="@+id/tvDistrict"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/text_separator_buton"
                >

                <TextView
                    android:id="@+id/tvRegion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/text_separator_buton"
                >
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_store_id" />
                <TextView
                    android:id="@+id/tvId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true"
                    android:background="@color/colorRed"
                    android:paddingLeft="@dimen/padding_text"
                    android:paddingRight="@dimen/padding_text"
                    android:text="ID"
                    android:textColor="@color/colorWhite"
                    android:textAppearance="?android:attr/textAppearanceSmall" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/text_separator_buton"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_cod_client"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/tvCodClient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/text_separator_buton"
                >
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_campana"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/tvCompanyName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textIsSelectable="true"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/tvCompanyId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/text_separator_buton"
                >
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_road_id" />
                <TextView
                    android:id="@+id/tvRoadId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true"
                    android:background="@color/colorRed"
                    android:paddingLeft="@dimen/padding_text"
                    android:paddingRight="@dimen/padding_text"
                    android:text="ID"
                    android:textColor="@color/colorWhite"
                    android:textAppearance="?android:attr/textAppearanceSmall" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/text_separator_buton"
                >
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_road_name" />
                <TextView
                    android:id="@+id/tvRoadName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true"
                    android:paddingLeft="@dimen/padding_text"
                    android:paddingRight="@dimen/padding_text"
                    android:text="ID"
                    android:textAppearance="?android:attr/textAppearanceSmall" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/text_separator_buton"
                >
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_usuer_id" />
                <TextView
                    android:id="@+id/tvUserId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true"
                    android:background="@color/colorRed"
                    android:paddingLeft="@dimen/padding_text"
                    android:paddingRight="@dimen/padding_text"
                    android:text="@string/text_user_id"
                    android:textColor="@color/colorWhite"
                    android:textAppearance="?android:attr/textAppearanceSmall" />


            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/text_separator_buton"
                >
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_uuario_name" />
                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true"
                    android:paddingLeft="@dimen/padding_text"
                    android:paddingRight="@dimen/padding_text"
                    android:text="ID"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/text_separator_buton"
                >
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_visita_id" />
                <TextView
                    android:id="@+id/tvVisitId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true"
                    android:background="@color/colorRed"
                    android:paddingLeft="@dimen/padding_text"
                    android:paddingRight="@dimen/padding_text"
                    android:text="@string/text_user_id"
                    android:textColor="@color/colorWhite"
                    android:textAppearance="?android:attr/textAppearanceSmall" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/text_separator_buton"
                >

                <!--<Button-->
                <!--android:id="@+id/btLiberar"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentBottom="false"-->
                <!--android:layout_alignParentRight="false"-->
                <!--android:layout_alignParentTop="true"-->
                <!--android:layout_below="@+id/tvCompanyId"-->
                <!--android:layout_weight="0.2"-->
                <!--android:text="Liberar"-->
                <!--android:theme="@style/RaisedButtonDark" />-->
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Liberar"
                    android:id="@+id/btLiberar"
                    android:drawableStart="@drawable/ic_liberate"
                    style="?android:attr/borderlessButtonStyle"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_open_for_order"
                    android:id="@+id/btOpenForOrder"
                    android:drawableStart="@drawable/ic_open_for_order"
                    style="?android:attr/borderlessButtonStyle"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btShared"
                    android:drawableStart="@drawable/ic_menu_share"
                    style="?android:attr/borderlessButtonStyle"/>
            </LinearLayout>

        </LinearLayout>


    </FrameLayout>

</android.support.v7.widget.CardView>

